# T_Bud1

./: .env.example  .gitignore  Makefile  README.md  example.py  pyproject.toml  test_pr8_adversarial.py  test_pr8_ci_v2.py  test_referee_manual.py
docs/: pr8_greenlight_checklist.md
scripts/: analyze_aug5_data.py  analyze_aug5_w_pattern.py  backfill_aug5_patterns.py  backfill_events.py  build_ci.py  check_latest_patterns.py  connect_to_ib_data.py  debug_audit.py  debug_pr7_data.py  demo_advanced_features.py  fetch_yesterday_data.py  find_aug5_patterns.py  init_advanced_db.py  init_db.py  load_sample_data.py  nightly_calibration.py  pr8_preflight.py  quick_aug5_fetch.py  run_data_service.py  setup_hybrid_db.py  test_daily_reports.py  test_detector_audit.py  test_pattern_integration.py  test_pr7_metrics.py  test_precursor.py  test_real_detectors.py  test_realtime_patterns.py  test_referee.py  test_warmup_simple.py  test_whatif_cache.py  validate_pr6_warmup.py  validate_response_integrity.py
sql/: pr5_truth_harness.sql  pr6_oos_sanctity.sql  pr8_ci_v2_schema.sql
tests/: test_consistency.py  test_council.py  test_nlp_parser.py  test_patterns.py  test_pr5_referee_truth.py
trading_buddy/api/: main.py
trading_buddy/core/: ci_uncertainty.py  ci_uncertainty_v2.py  config.py  ddl.py  detector_audit.py  duck.py  duck_hybrid.py  fdr_control.py  hybrid_data_manager.py  metrics.py  oos_enforcer.py  threshold_tuner.py  trade_gate.py
trading_buddy/council/: ci_v2_integration.py  consistency.py  stability.py  vote.py
trading_buddy/data/: data_sync_service.py  (+1 more)
(+35 files in other folders)
